<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step2"
        android:background="@color/white"
        android:padding="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/txt2"
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@color/white"
        android:padding="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:layout_marginTop="300dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="400dp"
        android:layout_marginRight="50dp"
        android:text="@string/register" />


</FrameLayout>